--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <!--navigation-->
           <ul class="hyperlink">
             <li class="hyperlink-list">
-              <a class="link" href="./index.html">Studio</a>
+              <a class="link carrent" href="./index.html">Studio</a>
             </li>
             <li class="hyperlink-list">
               <a class="link" href="">Portfolio</a>
@@ -45,12 +45,12 @@
         <address class="address">
           <ul class="address-list">
             <li>
-              <a href="mailto:info@devstudio.com" class="addres-link"
+              <a class="addres-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com
               </a>
             </li>
             <li>
-              <a href="tel:+110001111111" class="addres-link"
+              <a class="addres-link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -371,46 +371,112 @@
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="title-item">
-              <img
-                src="./images/img-8.jpg"
-                alt="site visualization"
-                width="360"
-              />
+              <div class="section-overlay">
+                <img
+                  src="./images/img-8.jpg"
+                  alt="site visualization"
+                  width="360"
+                />
+                <div class="overlay-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="title-item">
-              <img src="./images/img-7.jpg" alt="qr code reader" width="360" />
+              <div class="section-overlay">
+                <img
+                  src="./images/img-7.jpg"
+                  alt="qr code reader"
+                  width="360"
+                />
+                <div class="overlay-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="title-item">
-              <img src="./images/img-6.jpg" alt="cross platform" width="360" />
+              <div class="section-overlay">
+                <img
+                  src="./images/img-6.jpg"
+                  alt="cross platform"
+                  width="360"
+                />
+                <div class="overlay-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="title-item">
-              <img src="./images/img-5.jpg" alt="taxi service" width="360" />
+              <div class="section-overlay">
+                <img src="./images/img-5.jpg" alt="taxi service" width="360" />
+                <div class="overlay-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="title-item">
-              <img src="./images/img-9.jpg" alt="online courses" width="360" />
+              <div class="section-overlay">
+                <img
+                  src="./images/img-9.jpg"
+                  alt="online courses"
+                  width="360"
+                />
+                <div class="overlay-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="title-item">
-              <img src="./images/img-4.jpg" alt="design" width="360" />
+              <div class="section-overlay">
+                <img src="./images/img-4.jpg" alt="design" width="360" />
+                <div class="overlay-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -422,14 +488,57 @@
     </main>
     <!--footer-->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-span">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <ul>
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-span">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </ul>
+        <div class="footer-media">
+          <p class="footer-media-text">Social media</p>
+          <ul class="footer-list">
+            <li class="container-box">
+              <a
+                class="footer-icon"
+                href="https://www.instagram.com/"
+                target="_blank"
+                ><svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram-2"></use></svg
+              ></a>
+            </li>
+            <li class="container-box">
+              <a
+                class="footer-icon"
+                href="https://www.twitter.com/"
+                target="_blank"
+                ><svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter-1"></use></svg
+              ></a>
+            </li>
+            <li class="container-box">
+              <a
+                class="footer-icon"
+                href="https://www.facebook.com/"
+                target="_blank"
+                ><svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook-1"></use></svg
+              ></a>
+            </li>
+            <li class="container-box">
+              <a
+                class="footer-icon"
+                href="https://www.linkedin.com/"
+                target="_blank"
+                ><svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
