--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ul class="objective">
             <li class="objective-title">
               <div class="container-icon">
-                <svg width="64" hidden="64">
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -88,7 +88,7 @@
             </li>
             <li class="objective-title">
               <div class="container-icon">
-                <svg width="64" hidden="64">
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
@@ -100,7 +100,7 @@
             </li>
             <li class="objective-title">
               <div class="container-icon">
-                <svg width="64" hidden="64">
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
@@ -112,7 +112,7 @@
             </li>
             <li class="objective-title">
               <div class="container-icon">
-                <svg width="64" hidden="64">
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
@@ -490,13 +490,15 @@
     <footer class="footer">
       <div class="container footer-container">
         <ul>
-          <a class="footer-logo" href="./index.html"
-            >Web<span class="footer-span">Studio</span></a
-          >
-          <p class="text-footer">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+          <li>
+            <a class="footer-logo" href="./index.html"
+              >Web<span class="footer-span">Studio</span></a
+            >
+            <p class="text-footer">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </li>
         </ul>
         <div class="footer-media">
           <p class="footer-media-text">Social media</p>
