--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
                   alt="site visualization"
                   width="360"
                 />
-                <div class="overlay-text">
-                  <p>
+                <div>
+                  <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -397,8 +397,8 @@
                   alt="qr code reader"
                   width="360"
                 />
-                <div class="overlay-text">
-                  <p>
+                <div>
+                  <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -417,8 +417,8 @@
                   alt="cross platform"
                   width="360"
                 />
-                <div class="overlay-text">
-                  <p>
+                <div>
+                  <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -433,8 +433,8 @@
             <li class="title-item">
               <div class="section-overlay">
                 <img src="./images/img-5.jpg" alt="taxi service" width="360" />
-                <div class="overlay-text">
-                  <p>
+                <div>
+                  <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -453,8 +453,8 @@
                   alt="online courses"
                   width="360"
                 />
-                <div class="overlay-text">
-                  <p>
+                <div>
+                  <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -469,8 +469,8 @@
             <li class="title-item">
               <div class="section-overlay">
                 <img src="./images/img-4.jpg" alt="design" width="360" />
-                <div class="overlay-text">
-                  <p>
+                <div>
+                  <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -489,17 +489,15 @@
     <!--footer-->
     <footer class="footer">
       <div class="container footer-container">
-        <ul>
-          <li>
-            <a class="footer-logo" href="./index.html"
-              >Web<span class="footer-span">Studio</span></a
-            >
-            <p class="text-footer">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </li>
-        </ul>
+        <div class="footer-link">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-span">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
         <div class="footer-media">
           <p class="footer-media-text">Social media</p>
           <ul class="footer-list">
@@ -508,7 +506,7 @@
                 class="footer-icon"
                 href="https://www.instagram.com/"
                 target="_blank"
-                ><svg class="icon" width="16" height="16">
+                ><svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use></svg
               ></a>
             </li>
@@ -517,7 +515,7 @@
                 class="footer-icon"
                 href="https://www.twitter.com/"
                 target="_blank"
-                ><svg class="icon" width="16" height="16">
+                ><svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use></svg
               ></a>
             </li>
@@ -526,7 +524,7 @@
                 class="footer-icon"
                 href="https://www.facebook.com/"
                 target="_blank"
-                ><svg class="icon" width="16" height="16">
+                ><svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use></svg
               ></a>
             </li>
@@ -535,7 +533,7 @@
                 class="footer-icon"
                 href="https://www.linkedin.com/"
                 target="_blank"
-                ><svg class="icon" width="16" height="16">
+                ><svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use></svg
               ></a>
             </li>
