--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                   alt="site visualization"
                   width="360"
                 />
-                <div>
+                <div class="section-text">
                   <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -397,7 +397,7 @@
                   alt="qr code reader"
                   width="360"
                 />
-                <div>
+                <div class="section-text">
                   <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -417,7 +417,7 @@
                   alt="cross platform"
                   width="360"
                 />
-                <div>
+                <div class="section-text">
                   <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -433,7 +433,7 @@
             <li class="title-item">
               <div class="section-overlay">
                 <img src="./images/img-5.jpg" alt="taxi service" width="360" />
-                <div>
+                <div class="section-text">
                   <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -453,7 +453,7 @@
                   alt="online courses"
                   width="360"
                 />
-                <div>
+                <div class="section-text">
                   <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -469,7 +469,7 @@
             <li class="title-item">
               <div class="section-overlay">
                 <img src="./images/img-4.jpg" alt="design" width="360" />
-                <div>
+                <div class="section-text">
                   <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
