--- a/index.html
+++ b/index.html
@@ -377,13 +377,11 @@
                   alt="site visualization"
                   width="360"
                 />
-                <div class="section-text">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Banking App</h3>
@@ -397,13 +395,11 @@
                   alt="qr code reader"
                   width="360"
                 />
-                <div class="section-text">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Cashless Payment</h3>
@@ -417,13 +413,11 @@
                   alt="cross platform"
                   width="360"
                 />
-                <div class="section-text">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Meditation App</h3>
@@ -433,13 +427,11 @@
             <li class="title-item">
               <div class="section-overlay">
                 <img src="./images/img-5.jpg" alt="taxi service" width="360" />
-                <div class="section-text">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Taxi Service</h3>
@@ -453,13 +445,11 @@
                   alt="online courses"
                   width="360"
                 />
-                <div class="section-text">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
@@ -469,13 +459,11 @@
             <li class="title-item">
               <div class="section-overlay">
                 <img src="./images/img-4.jpg" alt="design" width="360" />
-                <div class="section-text">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-name">Online Courses</h3>
