--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         <div class="container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="title-item">
+            <li class="card-item">
               <div class="section-overlay">
                 <img
                   src="./images/img-8.jpg"
@@ -388,7 +388,7 @@
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="title-item">
+            <li class="card-item">
               <div class="section-overlay">
                 <img
                   src="./images/img-7.jpg"
@@ -406,7 +406,7 @@
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li class="title-item">
+            <li class="card-item">
               <div class="section-overlay">
                 <img
                   src="./images/img-6.jpg"
@@ -424,7 +424,7 @@
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="title-item">
+            <li class="card-item">
               <div class="section-overlay">
                 <img src="./images/img-5.jpg" alt="taxi service" width="360" />
                 <p class="overlay-text">
@@ -438,7 +438,7 @@
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li class="title-item">
+            <li class="card-item">
               <div class="section-overlay">
                 <img
                   src="./images/img-9.jpg"
@@ -456,7 +456,7 @@
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
-            <li class="title-item">
+            <li class="card-item">
               <div class="section-overlay">
                 <img src="./images/img-4.jpg" alt="design" width="360" />
                 <p class="overlay-text">
